Document sing and validate methods
